corpus/cpp/scope_declaration/case-01/snapshots/gcc15_plus/dual_sink_structured/render.default.txt
error: identifier not found in scope
--> src/main.cpp:2:12
help: check for typos, missing #include, or missing namespace qualifier
why: 'missing_value' was not declared in this scope
| src/main.cpp:2:12
|     return missing_value;
|            ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output